fix(slot): correct broken style inheritance

--- a/source/_less/reset.less
+++ b/source/_less/reset.less
@@ -21,6 +21,10 @@ html {
   box-sizing: inherit;
 }
 
+[hidden] {
+  display: none;
+}
+
 a {
   background-color: transparent;
 }
