--- a/source/components/checkbox/HxCheckbox.less
+++ b/source/components/checkbox/HxCheckbox.less
@@ -1,4 +1,4 @@
-@import 'vars';
+@import "../HxElement";
 
 :host {
   background-color: @gray-0;
@@ -11,10 +11,6 @@
   height: 1rem;
   vertical-align: middle;
   width: 1rem;
-
-  &([hidden]) {
-    display: none;
-  }
 
   /* default unchecked */
   &(:hover) {
